--- a/opus-interface/NoteSelectedPopView.xib
+++ b/opus-interface/NoteSelectedPopView.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NoteSelectedPopViewController" customModule="opus_interface" customModuleProvider="target">
@@ -11,9 +12,82 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="90" height="206"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nco-iS-xa4">
+                    <rect key="frame" x="23" y="10" width="44" height="73"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="73" id="6jI-SM-pAb"/>
+                        <constraint firstAttribute="width" constant="44" id="cp9-ho-CIm"/>
+                        <constraint firstAttribute="width" constant="44" id="ipU-VY-3da"/>
+                        <constraint firstAttribute="height" constant="73" id="tfw-80-udy"/>
+                    </constraints>
+                    <state key="normal" title="Button" image="sharp_menu">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="6jI-SM-pAb"/>
+                            <exclude reference="cp9-ho-CIm"/>
+                        </mask>
+                    </variation>
+                    <connections>
+                        <action selector="sharpSelected:" destination="-1" eventType="touchUpInside" id="Q0X-bR-jir"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1wL-bh-STh">
+                    <rect key="frame" x="38" y="114" width="44" height="73"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="44" id="28h-b8-jF7"/>
+                        <constraint firstAttribute="width" constant="44" id="Dvf-Rn-xaf"/>
+                        <constraint firstAttribute="width" constant="44" id="MhT-MS-xIr"/>
+                        <constraint firstAttribute="height" constant="73" id="Ozx-HQ-53B"/>
+                        <constraint firstAttribute="height" constant="73" id="gPN-jX-sjQ"/>
+                    </constraints>
+                    <state key="normal" title="Button" image="flat_menu">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="28h-b8-jF7"/>
+                            <exclude reference="MhT-MS-xIr"/>
+                            <exclude reference="gPN-jX-sjQ"/>
+                        </mask>
+                    </variation>
+                    <connections>
+                        <action selector="flatSelected:" destination="-1" eventType="touchUpInside" id="De0-cm-EBB"/>
+                    </connections>
+                </button>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="centerY" secondItem="1wL-bh-STh" secondAttribute="centerY" constant="-47.5" id="0h3-D5-WUF"/>
+                <constraint firstItem="1wL-bh-STh" firstAttribute="top" secondItem="nco-iS-xa4" secondAttribute="bottom" constant="24" id="37U-Yd-4N3"/>
+                <constraint firstItem="nco-iS-xa4" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="69X-Kk-aJN"/>
+                <constraint firstItem="nco-iS-xa4" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="6bh-ie-vbN"/>
+                <constraint firstAttribute="bottom" secondItem="1wL-bh-STh" secondAttribute="bottom" constant="10" id="7Ly-ve-hEw"/>
+                <constraint firstAttribute="centerX" secondItem="1wL-bh-STh" secondAttribute="centerX" constant="-15" id="9nh-al-bdh"/>
+                <constraint firstItem="1wL-bh-STh" firstAttribute="top" secondItem="nco-iS-xa4" secondAttribute="bottom" constant="23" id="RSm-An-iVM"/>
+                <constraint firstAttribute="centerX" secondItem="nco-iS-xa4" secondAttribute="centerX" id="gbn-i4-nQN"/>
+                <constraint firstItem="1wL-bh-STh" firstAttribute="trailing" secondItem="iN0-l3-epB" secondAttribute="trailingMargin" id="wLZ-FN-cQl"/>
+            </constraints>
+            <nil key="simulatedStatusBarMetrics"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="gbn-i4-nQN"/>
+                    <exclude reference="37U-Yd-4N3"/>
+                    <exclude reference="7Ly-ve-hEw"/>
+                    <exclude reference="RSm-An-iVM"/>
+                    <exclude reference="wLZ-FN-cQl"/>
+                </mask>
+            </variation>
+            <point key="canvasLocation" x="322" y="295"/>
         </view>
     </objects>
+    <resources>
+        <image name="flat_menu" width="25" height="85"/>
+        <image name="sharp_menu" width="43" height="73"/>
+    </resources>
 </document>
