--- a/opus-interface/PlaybackBar.xib
+++ b/opus-interface/PlaybackBar.xib
@@ -1,38 +1,41 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PlaybackBar" customModule="opus_interface" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PlaybackMenuViewController" customModule="opus_interface" customModuleProvider="target">
             <connections>
-                <outlet property="play_pause_button" destination="e0g-CU-Kb0" id="10g-6O-QeE"/>
+                <outlet property="play_pause_button" destination="e0g-CU-Kb0" id="biR-aG-Wt7"/>
                 <outlet property="stop_button" destination="aNY-Tb-inK" id="bFX-Wu-yqc"/>
+                <outlet property="view" destination="iN0-l3-epB" id="zjs-Kh-NuW"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="180" height="85"/>
+            <rect key="frame" x="0.0" y="3" width="180" height="82"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aNY-Tb-inK">
-                    <rect key="frame" x="8" y="3" width="80" height="80"/>
+                    <rect key="frame" x="8" y="0.0" width="80" height="80"/>
                     <state key="normal" image="stop-button">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <state key="highlighted" image="stop-button-highlighted"/>
                     <connections>
+                        <action selector="stop_button_pressed" destination="-1" eventType="touchUpInside" id="nE1-zN-T9a"/>
                         <action selector="stop_pressed" destination="-1" eventType="touchUpInside" id="ghO-5B-TMo"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e0g-CU-Kb0">
-                    <rect key="frame" x="92" y="3" width="80" height="80"/>
+                    <rect key="frame" x="92" y="0.0" width="80" height="80"/>
                     <state key="normal" image="play-button">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <state key="selected" image="pause-button"/>
                     <state key="highlighted" image="pause-button"/>
                     <connections>
+                        <action selector="play_pause_button_pressed" destination="-1" eventType="touchUpInside" id="cva-PC-TA0"/>
                         <action selector="play_pause_pressed" destination="-1" eventType="touchUpInside" id="Ib2-F4-Ccb"/>
                     </connections>
                 </button>
@@ -40,7 +43,7 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="499" y="367.5"/>
+            <point key="canvasLocation" x="96" y="195"/>
         </view>
     </objects>
     <resources>
